@@ -297,7 +297,7 @@
 			name="show_intro"
 			type="list"
 			label="Content_Attribs_Show_Intro_Label"
-			description="Content_Attribs_Show_Intro_Label"
+			description="Content_Attribs_Show_Intro_Desc"
 			default="">
 			<option
 				value="">Use Global</option>
@@ -333,34 +333,6 @@
 				value="0">No</option>
 			<option
 				value="1">Yes</option>
-		</field>
-
-		<field
-			name="article-allow_ratings"
-			type="list"
-			label="Content_Attribs_Allow_Ratings_Label"
-			description="Content_Attribs_Allow_Ratings_Desc"
-			default="">
-			<option
-				value="">Use Global</option>
-			<option
-				value="0">Hide</option>
-			<option
-				value="1">Show</option>
-		</field>
-
-		<field
-			name="article-allow_comments"
-			type="list"
-			label="Content_Attribs_Allow_Comments_Label"
-			description="Content_Attribs_Allow_Comments_Desc"
-			default="">
-			<option
-				value="">Use Global</option>
-			<option
-				value="0">Hide</option>
-			<option
-				value="1">Show</option>
 		</field>
 
 		<field
@@ -406,6 +378,14 @@
 		</field>
 
 		<field
+			name="show_readmore"
+			type="text"
+			label="Content_Attribs_Show_Readmore_Label"
+			description="Content_Attribs_Show_Readmore_Desc"
+			size="25"
+			default=""/>
+
+		<field
 			name="show_print_icon"
 			type="list"
 			label="Content_Attribs_Show_Print_Icon_Label"
@@ -434,14 +414,6 @@
 		</field>
 
 		<field
-			name="readmore"
-			type="text"
-			label="Content_Attribs_Readmore_Label"
-			description="Content_Attribs_Readmore_Desc"
-			size="25"
-			default=""/>
-
-		<field
 			name="page_title"
 			type="text"
 			label="JField_Alt_Page_title_Label"
@@ -457,6 +429,35 @@
 			extension="com_content"
 			view="article"
 			/>
+
+		<field
+			name="article-allow_ratings"
+			type="list"
+			label="Content_Attribs_Allow_Ratings_Label"
+			description="Content_Attribs_Allow_Ratings_Desc"
+			default="">
+			<option
+				value="">Use Global</option>
+			<option
+				value="0">Hide</option>
+			<option
+				value="1">Show</option>
+		</field>
+
+		<field
+			name="article-allow_comments"
+			type="list"
+			label="Content_Attribs_Allow_Comments_Label"
+			description="Content_Attribs_Allow_Comments_Desc"
+			default="">
+			<option
+				value="">Use Global</option>
+			<option
+				value="0">Hide</option>
+			<option
+				value="1">Show</option>
+		</field>
+
 
 	</fields>
 
