@@ -73,14 +73,12 @@ NO=No
 NUM CATEGORY ITEMS=# Category Items
 PARAMCONTACTICONS=Use icons, text or nothing next to the Contact information displayed
 PARAMDROPDOWN=Show/Hide the dropdown select list in Contact view
-PARAMEMAIL=Show/Hide the e-mail information. If you set to Show, the address will be protected from spambots by JavaScript Cloaking.
 PARAMEMAILCOPY=Show/Hide the checkbox to e-mail a copy to the sender's address
 PARAMCATLIST=Show/Hide the list of Categories in the list view page
 PARAMCATLISTCAT=Show/Hide the list of Categories in the table view page
 PARAMCATDESC=Show/Hide the Category Description
 PARAMNUMCATITEM=Show/Hide the number of Items in each Category
 PARAMEMAILDESCTEXT=The description text for the e-mail form. If left blank, the _EMAIL_DESCRIPTION language definition will be used instead.
-PARAMPRINT=Show/Hide the Item Print button (only affects this page).
 PARAMDESCTEXT=Description for this page. If left blank, it will load _WEBLINKS_DESC from your language file.
 PARAMIMAGE=Image for this page must be located in the /images/stories folder. Default will load web_links.jpg. No Image will mean an image is not loaded
 PARAMSHOWLIMIT=Show/Hide the Limit Box
